# nibi-dex

./: .env  .gitignore  Cargo.toml  LOGS.md  NOTICE  README.md  nibideploy.sh
.cargo/: config
artifacts/: checksums.txt  checksums_intermediate.txt  cw20_base.wasm  factory.wasm  packages.wasm  pair.wasm  router.wasm
contracts/factory/: Cargo.toml  README.migrate.md  contract.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/factory/deployment/: init.json  wasm_store.json
contracts/factory/ts/: Factory.client.ts  Factory.types.ts
contracts/mock_coin/: Cargo.toml
contracts/mock_coin/ts/: Cw20.client.ts
contracts/pair/: Cargo.toml  contract.rs  execute_pt.rs  helpers.rs  lib.rs  msg.rs  query_pt.rs  state.rs
contracts/pair/deployment/: wasm_store.json
contracts/pair/ts/: Pair.client.ts  Pair.types.ts
contracts/router/: Cargo.toml  contract.rs  lib.rs  msg.rs  state.rs
contracts/router/deployment/: init.json
src/: contract.rs
src/pair/: contract.rs  msg.rs  state.rs
tests/: Cargo.toml
tests/src/: integration_test.rs  lib.rs  test_new.rs
