[package]
name = "nibiru-hack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.0"""

[dependencies]
cw20 = {version = "1.1.0"}
cw20-base = {version = "1.1.0", features = ["library"]}
cw-storage-plus  = { version = "1.1.0" } 
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.12"
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.43" }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.7" }
cosmwasm-storage = { version = "1.2.7" }
cw-multi-test = "0.16.5"