[package]
name = "tests"
version = "0.1.0"
authors = ["Mehul0011 <imehul24@gmail.com>", "RaveenaBhasin <raveenabhasin15@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.4.0"
cosmwasm-storage = "1.4.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", default-features = false, features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
router = { path = "../contracts/router"}
factory = { path = "../contracts/factory" }
pair = { path = "../contracts/pair" }
packages = { path = "../packages/"}

[dev-dependencies]
cw-multi-test = "0.16.5"